Spline abstraction + GVF Bugfixes

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,8 @@
 /.vs
 /.vscode
 /build
-main.obj
-main.pdb
-main.ilk
-main.exe
-RRT.obj
-Trajectory.obj
-vc140.pdb
-CppProperties.json
-a.out
-obstacle.obj
 *.obj
+*.ilk
+*.pdb
+*.exe
+CppProperties.json
